# xBark

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  dist-workspace.toml
.github/workflows/: release.yml
docs/: RELEASING.md
examples/opencode-plugin/: sticker-notify.js
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: assets.rs  cli_types.rs  client.rs  config.rs  daemon.rs  discovery.rs  main.rs  overlay.rs  resolver.rs  server.rs
stickers/: _meta.json
xtask/: Cargo.toml
xtask/src/: main.rs
