[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
authors = ["W-Mai"]
license = "MIT"
repository = "https://github.com/W-Mai/xBark"
description = "Desktop sticker popup daemon — say :sticker[laugh]: anywhere, see it fly into your screen"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
