[package]
name = "xbark"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "xbark"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "protocol-asset", "devtools"] }

# HTTP server
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tower-http = { version = "0.6", features = ["cors"] }

# mDNS discovery
mdns-sd = "0.13"

# HTTP client (for CLI send subcommand)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Platform-specific paths
directories = "6"

# Logging & errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"

# Misc
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
